--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -19,9 +19,9 @@ html {
   background-color: var(--vp-c-bg);
   height: 100%;
   min-height: 100dvh;
-  scrollbar-gutter: stable;
+  // scrollbar-gutter: stable;
   scrollbar-width: thin;
-  // scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable both-edges;
   // text-wrap: balance;
 }
 
