--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -1368,7 +1368,7 @@ table {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: var(--vp-c-brand-light, #e9e4f5);
+  background-color: var(--vp-c-brand-3, #e9e4f5);
   transform: scaleY(0);
   /* 初始隐藏（Y轴缩放为0） */
   transform-origin: top right;
@@ -1383,4 +1383,53 @@ table {
   /* 显示下划线（Y轴缩放为1） */
   transform-origin: bottom left;
   /* 动画终点：左下角 */
+}
+
+/* 滚动条里面轨道，能向上向下移动 */
+::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  display: none;
+  background: #E2E6F1;
+}
+
+/* 滚动条里面的小方块，能向上向下移动 */
+*:hover::-webkit-scrollbar-thumb {
+  display: flex;
+  background: #E2E6F1;
+}
+
+*:hover::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+}
+
+/* 隐藏滚动条（Chrome/Safari/Edge） */
+.scroll-container::-webkit-scrollbar {
+  width: 0;  /* 垂直滚动条宽度 */
+  height: 0; /* 水平滚动条高度 */
+}
+
+/* 鼠标移入时显示滚动条 */
+.scroll-container:hover::-webkit-scrollbar {
+  width: 8px;  /* 自定义宽度 */
+  height: 8px; /* 自定义高度 */
+}
+
+/* 滚动条轨道 */
+.scroll-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 4px;
+}
+
+/* 滚动条滑块 */
+.scroll-container:hover::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+/* 滚动条滑块悬停效果 */
+.scroll-container:hover::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
