:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/vitepress.ext.scss
+++ b/.vitepress/theme/styles/vitepress.ext.scss
@@ -1454,3 +1454,15 @@ table {
 // .VPHero {
 //   background: linear-gradient(#fff 0%, #eff6ff99 30%, #fff0 100%);
 // }
+
+VPHome.VPFeatures.Features VPLink{
+backdrop-filter: blur(20px) saturate(1.2);
+  background-color: rgba(255, 255, 255, 0.06);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  padding: 24px;
+  transition: backdrop-filter 0.4s ease;
+  will-change: backdrop-filter;
+}
