--- a/.vitepress/theme/styles/variables.scss
+++ b/.vitepress/theme/styles/variables.scss
@@ -16,7 +16,7 @@ $app-font-family:
   "Segoe UI Emoji",
   "Segoe UI Symbol",
   "Noto Color Emoji";
-$mermaid-font-family: 'JetBrains Maple Mono', JetBrainsMapleMono, PingFangSC, AlibabaPuHuiTi,
+$mermaid-font-family: MapleMono, 'JetBrains Maple Mono', JetBrainsMapleMono, PingFangSC, AlibabaPuHuiTi,
     JetBrainsMono, "HarmonyOS Sans";
 $error-header-font-size: 32px;
 $app-font-weight: 400;
